<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fluger.armenian.app.MainActivity" >
    
    <item android:id="@+id/action_share"
          android:icon="@drawable/ic_share_white"
          android:title="@string/action_share"
          android:showAsAction="always"
          android:visible="false" />
    
	<item android:id="@+id/action_search"
          android:icon="@drawable/ic_search"
          android:title="@string/action_search"
          android:showAsAction="always"
          android:actionViewClass="android.widget.SearchView" />
	
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
